--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -1,14 +1,20 @@
-    <!-- input -->
-    <div class="search-form__wrapper">
-      <!-- С помощью атрибута action задается адрес, по которому будет передан запрос.
+<!-- input -->
+<div class="search-form__wrapper">
+  <!-- С помощью атрибута action задается адрес, по которому будет передан запрос.
 Далее с помощью атрибута method выбирается один из 2-х вариантов HTTP методов - метод GET или POST. Метод GET в браузерах установлен по умолчанию, и его специально задавать нет необходимости. Метод POST необходимо задавать, если передаваемые данные содержат конфиденциальную информацию - логин и пароль, например -->
-      <!-- в атрибут action вставила заглушку #  либо нужно ссылку в API ???????-->
-      <form class="search-form" action="#" method="get">
-        <!-- Тип инпута  type="search"  !!!! -->
-        <input
-          class="search-form__input"
-          type="search"
-          placeholder="Write movie name and click Enter"
-        />
-      </form>
-    </div>
+  <!-- в атрибут action вставила заглушку #  либо нужно ссылку в API ???????-->
+  <form class="search-form" action="#" method="get">
+    <!-- Тип инпута  type="search"  !!!! -->
+    <input
+      class="search-form__input"
+      type="search"
+      placeholder="Write movie name and click Enter"
+    />
+  </form>
+  <!-- Ошибка при неккоректном вводе названия фильма -->
+<!-- в js настроить что класс меняется на search-form__error--visibale для отображения ошибки -->
+    <p class="search-form__error--hidden">
+      The movie name was entered incorrectly! Please try again.
+    </p>
+
+</div>
