--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -1,5 +1,6 @@
+
 <section class="details-page">
-    <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman">
+    <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman" class="details-page__image">
     <div class="text-wrapper">
         <div class="text-wrapper__about">
             <h2 class="film-title">Dumbo (2019)</h2>
@@ -11,7 +12,7 @@
                     <li class="about-list_item">genre</li>
                 </ul>
                 <ul class="descr-list">
-                    <li class="descr-list__item">>6.5 / 1422</li>
+                    <li class="descr-list__item">6.5 / 1422</li>
                     <li class="descr-list__item">100.2</li>
                     <li class="descr-list__item">Dumbo</li>
                     <li class="descr-list__item">drama, geography, history</li>
