started to create pagination btn

--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -17,4 +17,13 @@
       The movie name was entered incorrectly! Please try again.
     </p>
 
+    <!-- pagination -->
+    <div id="page-counter">
+      <!-- На кнопках в спан добавить динамично class="visually-hidden" чтоб кнопка исчезла -->
+      <!-- Либо динамично убрать класс чтоб кнопка не была видна -->
+      <button type="button" data-action="previous"><span>prev</span></button>
+      <span id="page-number">0</span>
+      <button type="button" data-action="next"><span>next</span></button>
+    </div>
+
 </div>
