--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -1,5 +1,5 @@
 <section class="details-page">
-    <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman">
+    <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman" class="details-page__image">
     <div class="text-wrapper">
         <div class="text-wrapper__about">
             <h2 class="film-title">Dumbo (2019)</h2>
@@ -11,18 +11,20 @@
                     <li class="about-list_item">genre</li>
                 </ul>
                 <ul class="descr-list">
-                    <li class="descr-list__item">>6.5 / 1422</li>
+                    <li class="descr-list__item">6.5 / 1422</li>
                     <li class="descr-list__item">100.2</li>
                     <li class="descr-list__item">Dumbo</li>
                     <li class="descr-list__item">drama, geography, history</li>
                 </ul>
-            </div>          
+            </div>
         </div>
         <div class="text-wrapper__plot">
             <h2 class="plot-title">About</h2>
-            <p class="plot__descr">A young elephant, whose oversized ears enable him to fly, helps save a struggling circus, but when the circus plans a new venture, Dumbo and his friends discover dark secrets beneath its shiny veneer.</p>
+            <p class="plot__descr">A young elephant, whose oversized ears enable him to fly, helps save a struggling
+                circus, but when the circus plans a new venture, Dumbo and his friends discover dark secrets beneath its
+                shiny veneer.</p>
             <div class="btn-wrapper"></div>
-        </div>       
+        </div>
     </div>
 
 </section>
