rendering homepage movies list

--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -17,4 +17,8 @@
       The movie name was entered incorrectly! Please try again.
     </p>
 
+
 </div>
+
+<!-- список фильмов -->
+<ul class="movies"></ul>
