--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-    <p class="group-name__title">Made by GroupName</p>
+    <p class="group-name__title">Made by FantasticFour</p>
 </footer>
