connection of sections

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,10 +12,10 @@
 
         <ul class=" site-navigation__list">
             <li class="site-navigation__item">
-                <button class="site-navigation__btn">home</button>
+                <button data-action="btn-home" type="button" class="site-navigation__btn">home</button>
             </li>
             <li class="site-navigation__item">
-                <button class="site-navigation__btn">my library</button>
+                <button data-action="btn-library" type="button" class="site-navigation__btn">my library</button>
             </li>
         </ul>
     </nav>
