--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,8 @@
   //=./html/main.html
   //=./html/footer.html
 </body>
-  <!-- inject:js -->
-  <!-- endinject -->
+<!-- inject:js -->
+<script src='./js/3navigation.js'></script>
+<!-- endinject -->
+
 </html>
