--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,7 +1,7 @@
 <header class="header">
 
     <nav class="site-navigation container">
-        <a href="#" class="site-navigation__logo">
+        <a href="#" class="site-navigation__logo js-logo">
 
             <img src="./images/film.png" alt="film" class="site-navigation__logo_img">
             <p class="site-navigation__logo_wrapper ">
