--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Filmoteka</title>
-
+  <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
+  <!-- Сюда будет всталена ссылка на файл стилей -->
+  <!-- inject:css -->
+  <!-- endinject -->
 </head>
 
 <body>
@@ -14,6 +17,8 @@
   //=./html/main.html
   //=./html/footer.html
 </body>
-
+<!-- inject:js -->
+<script src='./js/3navigation.js'></script>
+<!-- endinject -->
 
 </html>
