added link css and script ks

--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Filmoteka</title>
-  <!-- <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
-  <!-- Сюда будет всталена ссылка на файл стилей -->
-  <!-- inject:css -->
-  <!-- endinject -->
+ <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
   //=./html/header.html
   //=./html/main.html
   //=./html/footer.html
+  <script src='./js/script.js'></script>
 </body>
-<!-- inject:js -->
-<script src='./js/3navigation.js'></script>
-<!-- endinject -->
+
 
 </html>
