started to create js task

--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -6,7 +6,7 @@
     <!-- в атрибут action вставила заглушку #  либо нужно ссылку в API ???????-->
     <form class="search-form" action="#" method="get">
       <!-- Тип инпута  type="search"  !!!! -->
-      <input class="search-form__input" type="search" placeholder="Write movie name and click Enter" />
+      <input class="search-form__input" type="text" value="" placeholder="Write movie name and click Enter" />
     </form>
     <!-- Ошибка при неккоректном вводе названия фильма -->
     <!-- в js настроить что класс меняется на search-form__error--visibale для отображения ошибки -->
