--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,10 @@
   //=./html/header.html
   //=./html/main.html
   //=./html/footer.html
-  <script src='./js/script.js'></script>
+  <!-- <script src='./js/script.js'></script> -->
 </body>
-
+<!-- inject:js -->
+  inject:2searchAndPlaginationHomePage.js
+<!-- endinject -->
 
 </html>
