created code for cleaning ul $moviesList

--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -10,7 +10,7 @@
     </form>
     <!-- Ошибка при неккоректном вводе названия фильма -->
     <!-- в js настроить что класс меняется на search-form__error--visibale для отображения ошибки -->
-    <p class="search-form__error--hidden">
+    <p class="search-form__error search-form__error--hidden">
       The movie name was entered incorrectly! Please try again.
     </p>
   </div>
