complete detailsPage(html-css)

--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -1,29 +1,38 @@
-<section class="details-page">
+<section class="details-page js-details-page container">
     <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman" class="details-page__image">
     <div class="text-wrapper">
         <div class="text-wrapper__about">
-            <h2 class="film-title">Dumbo (2019)</h2>
+            <h2 class="title">Dumbo (2019)</h2>
             <div class="about-wrapper">
                 <ul class="about-list">
-                    <li class="about-list_item">vote / votes</li>
-                    <li class="about-list_item">popularity</li>
-                    <li class="about-list_item">original title</li>
-                    <li class="about-list_item">genre</li>
-                </ul>
-                <ul class="descr-list">
-                    <li class="descr-list__item">6.5 / 1422</li>
-                    <li class="descr-list__item">100.2</li>
-                    <li class="descr-list__item">Dumbo</li>
-                    <li class="descr-list__item">drama, geography, history</li>
+                    <li class="about-list__item">
+                        <p class="about-list__descr">vote / votes</p>
+                        <p class="about-list__descr">6.5 / 1422</p>
+                    </li>
+                    <li class="about-list__item">
+                        <p class="about-list__descr">popularity</p>
+                        <p class="about-list__descr">100.2</p>
+                    </li>
+                    <li class="about-list__item">
+                        <p class="about-list__descr">original title</p>
+                        <p class="about-list__descr">Dumbo</p>
+                    </li>
+                    <li class="about-list__item">
+                        <p class="about-list__descr">genre</p>
+                        <p class="about-list__descr">drama, geography, history</p>
+                    </li>
                 </ul>
             </div>
         </div>
         <div class="text-wrapper__plot">
-            <h2 class="plot-title">About</h2>
+            <h2 class="title">About</h2>
             <p class="plot__descr">A young elephant, whose oversized ears enable him to fly, helps save a struggling
                 circus, but when the circus plans a new venture, Dumbo and his friends discover dark secrets beneath its
                 shiny veneer.</p>
-            <div class="btn-wrapper"></div>
+            <div class="btn-wrapper">
+                <button class="add-btn_watched">Add to watched</button>
+                <button class="add-btn_queue">Add to queue</button>
+            </div>
         </div>
     </div>
 
