redact detail page

--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -30,8 +30,8 @@
                 circus, but when the circus plans a new venture, Dumbo and his friends discover dark secrets beneath its
                 shiny veneer.</p>
             <div class="btn-wrapper">
-                <button class="add-btn_watched">Add to watched</button>
-                <button class="add-btn_queue">Add to queue</button>
+                <button data-add="btn-watched" class="add-btn_watched">Add to watched</button>
+                <button data-add="btn-queue" class="add-btn_queue">Add to queue</button>
             </div>
         </div>
     </div>
