adedd icon luope

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,5 +1,5 @@
-<div class="container">
+<main class="main container">
     //=./main/homePage.html
     //=./main/myFilmLibraryPage.html
     //=./main/detailsPage.html
-</div>
+</main>
