--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -4,7 +4,11 @@
     <form class="search-form" action="#" method="get">
 
       <!-- Тип инпута  type="search"  !!!! -->
-      <input class="search-form__input" type="text" value="" placeholder="Write movie name and click Enter" />
+
+      <label class="search-form__label" for="before"></label>
+      <input id="before" class="search-form__input" type="text" value=""
+        placeholder="Write movie name and click Enter" />
+
 
     </form>
     <!-- Ошибка при неккоректном вводе названия фильма -->
