start detailsPage.js

--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -2,24 +2,24 @@
     <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman" class="details-page__image">
     <div class="text-wrapper">
         <div class="text-wrapper__about">
-            <h2 class="title">Dumbo (2019)</h2>
+            <h2 class="title title_original">Dumbo (2019)</h2>
             <div class="about-wrapper">
                 <ul class="about-list">
                     <li class="about-list__item">
                         <p class="about-list__descr">vote / votes</p>
-                        <p class="about-list__descr">6.5 / 1422</p>
+                        <p class="about-list__descr about-list__descr_votes">6.5 / 1422</p>
                     </li>
                     <li class="about-list__item">
                         <p class="about-list__descr">popularity</p>
-                        <p class="about-list__descr">100.2</p>
+                        <p class="about-list__descr about-list__descr_popularity">100.2</p>
                     </li>
                     <li class="about-list__item">
                         <p class="about-list__descr">original title</p>
-                        <p class="about-list__descr">Dumbo</p>
+                        <p class="about-list__descr about-list__descr_title">Dumbo</p>
                     </li>
                     <li class="about-list__item">
                         <p class="about-list__descr">genre</p>
-                        <p class="about-list__descr">drama, geography, history</p>
+                        <p class="about-list__descr about-list__descr_genre">drama, geography, history</p>
                     </li>
                 </ul>
             </div>
