--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -2,14 +2,9 @@
   <!-- input -->
   <div class="search-form__wrapper">
     <form class="search-form" action="#" method="get">
-
-      <!-- Тип инпута  type="search"  !!!! -->
-
       <label class="search-form__label" for="before"></label>
       <input id="before" class="search-form__input" type="text" value=""
         placeholder="Write movie name and click Enter" />
-
-
     </form>
     <!-- Ошибка при неккоректном вводе названия фильма -->
     <!-- в js настроить что класс меняется на search-form__error--visibale для отображения ошибки -->
@@ -27,8 +22,8 @@
   <div id="page-counter" class="page-counter__wrapper">
     <!-- На кнопках в спан добавить динамично class="visually-hidden" чтоб кнопка исчезла -->
     <!-- Либо динамично убрать класс чтоб кнопка не была видна -->
-    <button type="button" data-action="previous" class="page-counter__btn"><span>Prev</span></button>
+    <button type="button" data-action="previous" class="page-counter__btn" id="page-counter__btn-previous"><span>Prev</span></button>
     <button type="button" class="page-counter__btn"><span id="page-number">1</span></button>
-    <button type="button" data-action="next" class="page-counter__btn"><span>Next</span></button>
+    <button type="button" data-action="next" class="page-counter__btn" id="page-counter__btn-next"><span>Next</span></button>
   </div>
 </section>
