--- a/src/html/main/myFilmLibraryPage.html
+++ b/src/html/main/myFilmLibraryPage.html
@@ -1,6 +1,9 @@
 <section class="library-page js-library-page">
 
     <h1>Library</h1>
+
+    <button>Watched</button>
+    <button>Queue</button>
     <!-- ваш код -->
 
 </section>
