--- a/src/html/main/myFilmLibraryPage.html
+++ b/src/html/main/myFilmLibraryPage.html
@@ -2,8 +2,8 @@
 
     <h1>Library</h1>
 
-    <button>Watched</button>
-    <button>Queue</button>
+    <button class="library__btn" data-action="btn-watched" type="button">Watched</button>
+    <button class="library__btn" data-action="btn-queue" type="button">Queue</button>
     <!-- ваш код -->
 
 </section>
