--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -22,8 +22,8 @@
   <div id="page-counter" class="page-counter__wrapper">
     <!-- На кнопках в спан добавить динамично class="visually-hidden" чтоб кнопка исчезла -->
     <!-- Либо динамично убрать класс чтоб кнопка не была видна -->
-    <button type="button" data-action="previous" class="page-counter__btn" id="page-counter__btn-previous"><span>Prev</span></button>
+    <button type="button" data-action="previous" class="page-counter__btn" id="page-counter__btn-previous">Prev</button>
     <button type="button" class="page-counter__btn"><span id="page-number">1</span></button>
-    <button type="button" data-action="next" class="page-counter__btn" id="page-counter__btn-next"><span>Next</span></button>
+    <button type="button" data-action="next" class="page-counter__btn" id="page-counter__btn-next">Next</button>
   </div>
 </section>
