--- a/src/html/header.html
+++ b/src/html/header.html
@@ -12,7 +12,7 @@
 
         <ul class=" site-navigation__list">
             <li class="site-navigation__item">
-                <button data-action="btn-home" type="button" class="site-navigation__btn">home</button>
+                <button data-action="btn-home" from='delete' type="button" class="site-navigation__btn">home</button>
             </li>
             <li class="site-navigation__item">
                 <button data-action="btn-library" type="button" class="site-navigation__btn">my library</button>
