--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -14,7 +14,7 @@
   </div>
 
   <!-- список фильмов -->
-  <ul class="movies"></ul>
+  <ul class="movies js-movies"></ul>
   </div>
 
   <!-- pagination -->
