--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <!-- <script src='./js/script.js'></script> -->
 </body>
 <!-- inject:js -->
-inject:2searchAndPlaginationHomePage.js
+inject:0fakeResponse.js
 <!-- endinject -->
 
 </html>
