--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,9 @@
 <footer class="footer">
     <p class="group-name__title">Made by FantasticFour</p>
 </footer>
+
+<div class="scroll-top">
+    <a class="scroll-top__link" href="#scroll-here">
+        <img src=" ../../images/btn.png" alt="scroll to top">
+    </a>
+</div>
