--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="scroll-here" class="header">
 
     <nav class="site-navigation container">
         <a href="#" class="site-navigation__logo js-logo">
