--- a/src/html/main/myFilmLibraryPage.html
+++ b/src/html/main/myFilmLibraryPage.html
@@ -1,9 +1,14 @@
-<section class="library-page js-library-page">
+<section class="library-page js-library-page container">
+    <div class="library">
+        <button class="library__btn" data-action="btn-watched" type="button">Watched</button>
+        <button class="library__btn" data-action="btn-queue" type="button">Queue</button>
+    </div>
 
-    <h1>Library</h1>
 
-    <button class="library__btn" data-action="btn-watched" type="button">Watched</button>
-    <button class="library__btn" data-action="btn-queue" type="button">Queue</button>
-    <!-- ваш код -->
+    <!-- список фильмов -->
+    </div>
+    <ul class="library-list movies js-library"></ul>
+
+    </div>
 
 </section>
