made corrections at btn Number of Page

--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -21,7 +21,7 @@
   <!-- pagination -->
   <div id="page-counter" class="page-counter__wrapper hidden">
     <button type="button" data-action="previous" class="page-counter__btn" id="page-counter__btn-previous">Prev</button>
-    <button type="button" class="page-counter__btn"><span id="page-number">1</span></button>
+    <button type="button" class="page-counter__btn btn_page-number">1</button>
     <button type="button" data-action="next" class="page-counter__btn" id="page-counter__btn-next">Next</button>
   </div>
 </section>
