--- a/src/html/main/myFilmLibraryPage.html
+++ b/src/html/main/myFilmLibraryPage.html
@@ -1,4 +1,4 @@
-<section class="library-page js-library-page container">
+<section class="library-page js-library-page container visually-hidden">
     <div class="library">
         <button class="library__btn" data-action="btn-watched" type="button">Watched</button>
         <button class="library__btn" data-action="btn-queue" type="button">Queue</button>
