--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -1,4 +1,4 @@
-<section class="details-page js-details-page container visually-hidden">
+<section class="details-page js-details-page container">
     <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman" class="details-page__image">
     <div class="text-wrapper">
         <div class="text-wrapper__about">
@@ -7,15 +7,15 @@
                 <ul class="about-list">
                     <li class="about-list__item">
                         <p class="about-list__descr">vote / votes</p>
-                        <p class="about-list__descr about-list__descr_votes">6.5 / 1422</p>
+                        <p class="about-list__descr about-list__descr_votes"></p>
                     </li>
                     <li class="about-list__item">
                         <p class="about-list__descr">popularity</p>
-                        <p class="about-list__descr about-list__descr_popularity">100.2</p>
+                        <p class="about-list__descr about-list__descr_popularity"></p>
                     </li>
                     <li class="about-list__item">
                         <p class="about-list__descr">original title</p>
-                        <p class="about-list__descr about-list__descr_title">Dumbo</p>
+                        <p class="about-list__descr about-list__descr_title"></p>
                     </li>
                     <li class="about-list__item">
                         <p class="about-list__descr">genre</p>
