--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,5 +1,8 @@
+<div class="subheader">
+    //=./main/versionDescription.html
+    //=./toolbar.html
+</div>
 <header id="scroll-here" class="header">
-
     <nav class="site-navigation container">
         <a href="#" class="site-navigation__logo js-logo">
 
