--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -2,36 +2,34 @@
     <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman" class="details-page__image">
     <div class="text-wrapper">
         <div class="text-wrapper__about">
-            <h2 class="title title_original">Dumbo (2019)</h2>
+            <h2 class="title title_original"></h2>
             <div class="about-wrapper">
                 <ul class="about-list">
                     <li class="about-list__item">
-                        <p class="about-list__descr">vote / votes</p>
+                        <p class="about-list__descr"></p>
                         <p class="about-list__descr about-list__descr_votes"></p>
                     </li>
                     <li class="about-list__item">
-                        <p class="about-list__descr">popularity</p>
+                        <p class="about-list__descr"></p>
                         <p class="about-list__descr about-list__descr_popularity"></p>
                     </li>
                     <li class="about-list__item">
-                        <p class="about-list__descr">original title</p>
+                        <p class="about-list__descr"></p>
                         <p class="about-list__descr about-list__descr_title"></p>
                     </li>
                     <li class="about-list__item">
-                        <p class="about-list__descr">genre</p>
-                        <p class="about-list__descr about-list__descr_genre">drama, geography, history</p>
+                        <p class="about-list__descr"></p>
+                        <p class="about-list__descr about-list__descr_genre"></p>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="text-wrapper__plot">
-            <h2 class="title">About</h2>
-            <p class="plot__descr">A young elephant, whose oversized ears enable him to fly, helps save a struggling
-                circus, but when the circus plans a new venture, Dumbo and his friends discover dark secrets beneath its
-                shiny veneer.</p>
+            <h2 class="title"></h2>
+            <p class="plot__descr"></p>
             <div class="btn-wrapper">
-                <button data-add="btn-watched" class="add-btn_watched">Add to watched</button>
-                <button data-add="btn-queue" class="add-btn_queue">Add to queue</button>
+                <button data-add="btn-watched" class="add-btn_watched"></button>
+                <button data-add="btn-queue" class="add-btn_queue"></button>
             </div>
         </div>
     </div>
