--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -34,6 +34,9 @@
                 <button data-add="btn-queue" class="add-btn_queue">Add to queue</button>
             </div>
         </div>
+        <div class="js-video"></div>
+
     </div>
+
 
 </section>
