--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -6,19 +6,19 @@
             <div class="about-wrapper">
                 <ul class="about-list">
                     <li class="about-list__item">
-                        <p class="about-list__descr"></p>
+                        <p class="about-list__descr">vote / votes</p>
                         <p class="about-list__descr about-list__descr_votes"></p>
                     </li>
                     <li class="about-list__item">
-                        <p class="about-list__descr"></p>
+                        <p class="about-list__descr">popularity</p>
                         <p class="about-list__descr about-list__descr_popularity"></p>
                     </li>
                     <li class="about-list__item">
-                        <p class="about-list__descr"></p>
+                        <p class="about-list__descr">original title</p>
                         <p class="about-list__descr about-list__descr_title"></p>
                     </li>
                     <li class="about-list__item">
-                        <p class="about-list__descr"></p>
+                        <p class="about-list__descr">genre</p>
                         <p class="about-list__descr about-list__descr_genre"></p>
                     </li>
                 </ul>
@@ -28,8 +28,8 @@
             <h2 class="title"></h2>
             <p class="plot__descr"></p>
             <div class="btn-wrapper">
-                <button data-add="btn-watched" class="add-btn_watched"></button>
-                <button data-add="btn-queue" class="add-btn_queue"></button>
+                <button data-add="btn-watched" class="add-btn_watched animated flip"></button>
+                <button data-add="btn-queue" class="add-btn_queue animated flip"></button>
             </div>
         </div>
         <div class="js-video"></div>
