--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   //=./html/main.html
   //=./html/footer.html
   <!-- <script src='./js/script.js'></script> -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pnotify/3.2.1/pnotify.js"></script>
 </body>
 <!-- inject:js -->
 inject:0fakeResponse.js
