lazy load, показываем фишки только в PRO теме

--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -32,7 +32,7 @@
                 <button data-add="btn-queue" class="add-btn_queue"></button>
             </div>
         </div>
-        <div class="js-video visually-hidden"></div>
+        <div class="js-video"></div>
 
     </div>
 
