--- a/src/html/toolbar.html
+++ b/src/html/toolbar.html
@@ -1,10 +1,8 @@
 <div class="toolbar">
     <!-- Разметка переключателя темы -->
     <div class="theme-switch">
-        <object class="toolbar__image" type="image/svg+xml" data="../images/fire.svg" class="image">
-            Your browser does not support SVG
-            <!--  сюда можно так же поставить тег img с фолбек картинкой в формате jpg или png  -->
-        </object>
+
+        <img class="toolbar__image" src="../images/fire.svg" alt="">
 
         <div class="switch">
             <input class="switch__input js-switch-input" type="checkbox" name="theme" id="theme-switch-control" />
