--- a/src/html/main/versionDescription.html
+++ b/src/html/main/versionDescription.html
@@ -1,6 +1,7 @@
 <ul class="features">
-    <li>Lazy Loading</li>
-    <li>CSS анимации</li>
-    <li>Youtube трейлеры</li>
-    <li>Изменение темы</li>
+    <h4 class="features__title">Вам доступны</h4>
+    <li class="features__item">Lazy Loading</li>
+    <li class="features__item">CSS анимации</li>
+    <li class="features__item">Youtube трейлеры</li>
+    <li class="features__item">Изменение темы</li>
 </ul>
