--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -4,8 +4,7 @@
   <div class="search-form__wrapper">
     <form class="search-form" action="#" method="get">
       <label class="search-form__label" for="before"></label>
-      <input id="before" class="search-form__input" type="text" value=""
-        placeholder="Write movie name and click Enter" />
+      <input id="before" class="search-form__input" type="text" value="" placeholder="MOVIE NAME" />
     </form>
 
     <!-- Ошибка при неккоректном вводе названия фильма -->
