made corrections of btn Prev at first page

--- a/src/html/main/homePage.html
+++ b/src/html/main/homePage.html
@@ -19,7 +19,7 @@
 
   <!-- pagination -->
   <div id="page-counter" class="page-counter__wrapper">
-    <button type="button" data-action="previous" class="page-counter__btn" id="page-counter__btn-previous"
+    <button type="button" data-action="previous" class="page-counter__btn btn_prev_hidden" id="page-counter__btn-previous"
       href="#scroll-here">Prev</button>
     <button type="button" class="page-counter__btn btn_page-number">1</button>
     <button type="button" data-action="next" class="page-counter__btn" id="page-counter__btn-next"
