--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -4,6 +4,6 @@
 
 <div class="scroll-top">
     <a class="scroll-top__link" href="#scroll-here">
-        <img src=" ../../images/btn.png" alt="scroll to top">
+        <img src=" ./images/btn.png" alt="scroll to top">
     </a>
 </div>
