--- a/src/html/toolbar.html
+++ b/src/html/toolbar.html
@@ -2,7 +2,7 @@
     <!-- Разметка переключателя темы -->
     <div class="theme-switch">
 
-        <img class="toolbar__image" src="../images/fire.svg" alt="">
+        <img class="toolbar__image" src="./images/fire.svg" alt="">
 
         <div class="switch">
             <input class="switch__input js-switch-input" type="checkbox" name="theme" id="theme-switch-control" />
