--- a/src/html/main/detailsPage.html
+++ b/src/html/main/detailsPage.html
@@ -1,5 +1,5 @@
 <section class="details-page js-details-page container visually-hidden">
-  <img src="../../images/3oOBjD1LZCjfrLPPL49xP9fFgeR.jpg" alt="batman" class="details-page__image" />
+  <img src="#" alt="batman" class="details-page__image" />
   <div class="text-wrapper">
     <div class="text-wrapper__about">
       <h2 class="title title_original "></h2>
